# ygopro-core

./: CMakeLists.txt
.github/workflows/: build.yml  build_cmake.yml
premake/: dll.lua
